--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>FrontPruebaSerempre</title>
-  <base href="C:/Program Files/Git/front-prueba-serempre/">
+  <base href="/front-prueba-serempre/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.12c098325140c7f4d4ba.css"></head>
